added increment_point service
